--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -6,6 +6,7 @@
 
   <body style="background-color: #E0FFFF;">
     <header>
+      <a href="/">Homepage</a>
       <h1 style="text-align: center;" id="header"> Foodie Cookbook </h1>
       <h2 style="text-align: center;" id="header"> Your Personal Online Cookbook </h2>
     </header>
