--- a/app/views/recipes/recipes.erb
+++ b/app/views/recipes/recipes.erb
@@ -7,7 +7,7 @@
   <body style="background-color: #E0FFFF;">
 
     <header>
-      <a href="/">Homepage</a>
+      <a href="/recipes">Homepage</a>
       <a href="/logout">Log Out</a>
       <h1 style="text-align: center;" id="header"> Foodie Cookbook </h1>
       <h2 style="text-align: center;" id="header"> Your Personal Online Cookbook </h2>
