adds editing functionality

--- a/app/views/recipes/create_recipe.erb
+++ b/app/views/recipes/create_recipe.erb
@@ -22,5 +22,9 @@
       <input type="submit" value="Create a Recipe">
     </form>
 
+    <br><br>
+    <%binding.pry%>
+    <p>View your personal recipe <a href="/users/<%=@current_user.slug%>">cookbook</a>.</p>
+
   </body>
 </html>
