--- a/app/views/recipes/show_recipe.erb
+++ b/app/views/recipes/show_recipe.erb
@@ -19,6 +19,7 @@
       <p>Cook Time: <%= @recipe.cook_time%></p>
       <p>Ingredients: <%= @recipe.ingredients%></p>
       <p>Instructions: <%= @recipe.instructions%></p>
+      <i><p>This recipe needs some <a href="/recipes/<%=@recipe.id%>/edit">editing.</a></p></i>
 
     <br><br>
 
