--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -7,7 +7,7 @@
   <body style="background-color: #E0FFFF;">
 
     <header>
-      <a href="/">Homepage</a>
+      <a href="/recipes">Homepage</a>
       <a href="/logout">Log Out</a>
       <h1 style="text-align: center;" id="header"> Foodie Cookbook </h1>
       <h2 style="text-align: center;" id="header"> Your Personal Online Cookbook </h2>
@@ -24,6 +24,7 @@
       <p>Cook Time: <%= recipe.cook_time%></p>
       <p>Ingredients: <%= recipe.ingredients%></p>
       <p>Instructions: <%= recipe.instructions%></p>
+      <i><p>This recipe needs some <a href="/recipes/<%=recipe.id%>/edit">editing.</a></p></i>
       <br><br>
     <%end%>
 
