--- a/app/views/recipes/delete_recipe.erb
+++ b/app/views/recipes/delete_recipe.erb
@@ -13,19 +13,19 @@
       <h2 style="text-align: center;" id="header"> Your Personal Online Cookbook </h2>
     </header>
 
-    <h3>Edit Your Recipe: </h3>
-    <form action="/recipes/<%=@recipe.id%>" method="POST">
-      <input id="hidden" type="hidden" name="_method" value="PATCH">
+    <h4>If you are sure you would like to delete this recipe, click the delete button below. </h4>
+    <form action="/recipes/<%=@recipe.id%>/delete" method="POST">
+      <input id="hidden" type="hidden" name="_method" value="DELETE">
       <label for="recipe_name">Recipe Name: </label><input type="text" name="recipe_name" value="<%=@recipe.recipe_name%>"><br><br>
       <label for="cook_time">Cook Time: </label><input type="text" name="cook_time" value="<%=@recipe.cook_time%>"><br><br>
       <label for="ingredients">Ingredients: </label><input type="text" name="ingredients" size="100" value="<%=@recipe.ingredients%>"><br><br>
       <label for="instructions">Instructions: </label><input type="text" name="instructions" size="100" value="<%=@recipe.instructions%>"><br><br>
-      <input type="submit" value="Edit Recipe">
+      <input type="submit" value="Delete Recipe">
     </form>
 
     <br><br>
 
-    <p>Not sure you want to edit?</p>
+    <h4>Wait! I don't want to delete this recipe!</h4>
     <p>I feel like cookin'! <a class="button" href="/recipes/new">Create a New Recipe</a></p>
     <p>View your personal recipe <a href="/users/<%=@current_user.slug%>">cookbook</a>.</p>
 
