--- a/app/views/recipes/show_recipe.erb
+++ b/app/views/recipes/show_recipe.erb
@@ -19,7 +19,7 @@
       <p>Cook Time: <%= @recipe.cook_time%></p>
       <p>Ingredients: <%= @recipe.ingredients%></p>
       <p>Instructions: <%= @recipe.instructions%></p>
-      <i><p>This recipe needs some <a href="/recipes/<%=@recipe.id%>/edit">editing.</a></p></i>
+      <i><p>This recipe needs some <a href="/recipes/<%=@recipe.id%>/edit">editing.</a> This recipe needs to be <a href="/recipes/<%=@recipe.id%>/delete">deleted.</a></p></i>
 
     <br><br>
 
