--- a/app/views/recipes/create_recipe.erb
+++ b/app/views/recipes/create_recipe.erb
@@ -1,3 +1,7 @@
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -23,7 +27,7 @@
     </form>
 
     <br><br>
-  
+
     <p>View your personal recipe <a href="/users/<%=@current_user.slug%>">cookbook</a>.</p>
 
   </body>
