adds cook_time units to views

--- a/app/views/recipes/recipes.erb
+++ b/app/views/recipes/recipes.erb
@@ -32,7 +32,7 @@
           <h3>From the Kitchen of Chef <%=recipe.user.name%></h3>
         <%end%>
         <p>Recipe Name: <%= recipe.recipe_name%></p>
-        <p>Cook Time: <%= recipe.cook_time%></p>
+        <p>Cook Time: <%= recipe.cook_time%> minute(s)</p>
         <p>Ingredients: <%= recipe.ingredients%></p>
         <p>Instructions: <%= recipe.instructions%></p>
         <p>------------------------------------------</p>
