--- a/app/views/recipes/create_recipe.erb
+++ b/app/views/recipes/create_recipe.erb
@@ -20,7 +20,7 @@
     <h3>Create a Delicious New Recipe: </h3>
     <form action="/recipes" method="POST">
       <label for="recipe_name">Recipe Name: </label><input type="text" name="recipe_name"><br><br>
-      <label for="cook_time">Cook Time: </label><input type="text" name="cook_time"><br><br>
+      <label for="cook_time">Cook Time: <input type="text" name="cook_time"> minute(s)</label><br><br>
       <label for="ingredients">Ingredients: </label><input type="text" name="ingredients" size="100"><br><br>
       <label for="instructions">Instructions: </label><input type="text" name="instructions" size="100"><br><br>
       <input type="submit" value="Create a Recipe">
