--- a/app/views/recipes/edit_recipe.erb
+++ b/app/views/recipes/edit_recipe.erb
@@ -21,7 +21,7 @@
     <form action="/recipes/<%=@recipe.id%>" method="POST">
       <input id="hidden" type="hidden" name="_method" value="PATCH">
       <label for="recipe_name">Recipe Name: </label><input type="text" name="recipe_name" value="<%=@recipe.recipe_name%>"><br><br>
-      <label for="cook_time">Cook Time: </label><input type="text" name="cook_time" value="<%=@recipe.cook_time%>"><br><br>
+      <label for="cook_time">Cook Time: <input type="text" name="cook_time" value="<%=@recipe.cook_time%>"> minute(s)</label><br><br>
       <label for="ingredients">Ingredients: </label><input type="text" name="ingredients" size="100" value="<%=@recipe.ingredients%>"><br><br>
       <label for="instructions">Instructions: </label><input type="text" name="instructions" size="100" value="<%=@recipe.instructions%>"><br><br>
       <input type="submit" value="Edit Recipe">
